add type information to api docs