@@ -2,6 +2,7 @@ package hades.messaging.rest;
 
 import common.inject.api.Inject;
 import common.inject.api.RegisterFor;
+import common.logger.Logger;
 import dobby.annotations.Delete;
 import dobby.annotations.Get;
 import dobby.annotations.Post;
@@ -9,18 +10,18 @@ import dobby.annotations.Put;
 import dobby.io.HttpContext;
 import dobby.io.response.ResponseCodes;
 import dobby.util.json.NewJson;
-import common.logger.Logger;
 import hades.annotations.AuthorizedOnly;
 import hades.annotations.PermissionCheck;
 import hades.apidocs.annotations.ApiDoc;
 import hades.apidocs.annotations.ApiResponse;
+import hades.common.ErrorResponse;
 import hades.messaging.Message;
 import hades.messaging.service.MessageService;
 
 import java.util.Arrays;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
+import static hades.common.ErrorResponses.*;
 import static hades.user.rest.UserResource.uuidFromString;
 
 @RegisterFor(MessageResource.class)
@@ -43,15 +44,18 @@ public class MessageResource {
     )
     @ApiResponse(
             code = 200,
-            message = "Returns a list of all unread messages"
+            message = "Returns a list of all unread messages",
+            responseBody = GetMessagesDTO.class
     )
     @ApiResponse(
             code = 400,
-            message = "Invalid user id"
+            message = "Invalid user id",
+            responseBody = ErrorResponse.class
     )
     @ApiResponse(
             code = 403,
-            message = "User does not have permission to access this resource"
+            message = "User does not have permission to access this resource",
+            responseBody = ErrorResponse.class
     )
     @Get(BASE_PATH + "/unread")
     public void getUnreadMessages(HttpContext context) {
@@ -63,10 +67,7 @@ public class MessageResource {
         }
 
         final Message[] unreadMessages = messageService.findUnreadMessages(userId);
-
-        final NewJson response = new NewJson();
-        response.setList("messages", Arrays.stream(unreadMessages).map(Message::toJson).collect(Collectors.toList()));
-        context.getResponse().setBody(response);
+        context.getResponse().setBody(new GetMessagesDTO(Arrays.stream(unreadMessages).toList()));
     }
 
     @AuthorizedOnly
@@ -77,19 +78,23 @@ public class MessageResource {
     )
     @ApiResponse(
             code = 200,
-            message = "Returns the message"
+            message = "Returns the message",
+            responseBody = Message.class
     )
     @ApiResponse(
             code = 400,
-            message = "Invalid message id or user id"
+            message = "Invalid message id or user id",
+            responseBody = ErrorResponse.class
     )
     @ApiResponse(
             code = 403,
-            message = "User does not have permission to access this resource"
+            message = "User does not have permission to access this resource",
+            responseBody = ErrorResponse.class
     )
     @ApiResponse(
             code = 404,
-            message = "Message not found"
+            message = "Message not found",
+            responseBody = ErrorResponse.class
     )
     @Get(BASE_PATH + "/{messageId}")
     public void getMessage(HttpContext context) {
@@ -100,10 +105,7 @@ public class MessageResource {
         final UUID userId = uuidFromString(userIdString, context);
 
         if (messageId == null || userId == null) {
-            final NewJson response = new NewJson();
-            response.setString("message", "Invalid message id or user id.");
-            context.getResponse().setBody(response);
-            context.getResponse().setCode(ResponseCodes.BAD_REQUEST);
+            badRequest(context.getResponse(), "Invalid message id or user id.");
             return;
         }
 
@@ -114,7 +116,7 @@ public class MessageResource {
             return;
         }
 
-        context.getResponse().setBody(message.toJson());
+        context.getResponse().setBody(message);
     }
 
     @AuthorizedOnly
@@ -129,15 +131,18 @@ public class MessageResource {
     )
     @ApiResponse(
             code = 400,
-            message = "Invalid message id or user id"
+            message = "Invalid message id or user id",
+            responseBody = ErrorResponse.class
     )
     @ApiResponse(
             code = 403,
-            message = "User does not have permission to access this resource"
+            message = "User does not have permission to access this resource",
+            responseBody = ErrorResponse.class
     )
     @ApiResponse(
             code = 404,
-            message = "Message not found"
+            message = "Message not found",
+            responseBody = ErrorResponse.class
     )
     @Put(BASE_PATH + "/read/{messageId}")
     public void markMessageAsRead(HttpContext context) {
@@ -148,10 +153,7 @@ public class MessageResource {
         final UUID userId = uuidFromString(userIdString, context);
 
         if (messageId == null || userId == null) {
-            final NewJson response = new NewJson();
-            response.setString("message", "Invalid message id or user id.");
-            context.getResponse().setBody(response);
-            context.getResponse().setCode(ResponseCodes.BAD_REQUEST);
+            badRequest(context.getResponse(), "Invalid message id or user id.");
             return;
         }
 
@@ -165,6 +167,7 @@ public class MessageResource {
         if (!message.getTo().equals(userId)) {
             LOGGER.warn("User " + userId + " tried to mark message " + messageId + " as read, but it is not addressed to them.");
             sendMessageNotFound(messageId, context);
+            return;
         }
 
         message.setDidRead(true);
@@ -184,19 +187,23 @@ public class MessageResource {
     )
     @ApiResponse(
             code = 400,
-            message = "Invalid message id or user id"
+            message = "Invalid message id or user id",
+            responseBody = ErrorResponse.class
     )
     @ApiResponse(
             code = 403,
-            message = "User does not have permission to access this resource"
+            message = "User does not have permission to access this resource",
+            responseBody = ErrorResponse.class
     )
     @ApiResponse(
             code = 404,
-            message = "Message not found"
+            message = "Message not found",
+            responseBody = ErrorResponse.class
     )
     @ApiResponse(
             code = 500,
-            message = "Could not delete message"
+            message = "Could not delete message",
+            responseBody = ErrorResponse.class
     )
     @Delete(BASE_PATH + "/{messageId}")
     public void deleteMessage(HttpContext context) {
@@ -206,10 +213,7 @@ public class MessageResource {
         final UUID userId = uuidFromString(userIdString, context);
 
         if (messageId == null || userId == null) {
-            final NewJson response = new NewJson();
-            response.setString("message", "Invalid message id or user id.");
-            context.getResponse().setBody(response);
-            context.getResponse().setCode(ResponseCodes.BAD_REQUEST);
+            badRequest(context.getResponse(), "Invalid message id or user id.");
             return;
         }
 
@@ -223,10 +227,7 @@ public class MessageResource {
         final boolean success = messageService.delete(messageId);
 
         if (!success) {
-            final NewJson response = new NewJson();
-            response.setString("message", "Failed to delete message.");
-            context.getResponse().setBody(response);
-            context.getResponse().setCode(ResponseCodes.INTERNAL_SERVER_ERROR);
+            internalError(context.getResponse(), "Failed to delete message.");
             return;
         }
 
@@ -246,35 +247,32 @@ public class MessageResource {
     )
     @ApiResponse(
             code = 400,
-            message = "Invalid request body"
+            message = "Invalid request body",
+            responseBody = ErrorResponse.class
     )
     @ApiResponse(
             code = 403,
-            message = "User does not have permission to access this resource"
+            message = "User does not have permission to access this resource",
+            responseBody = ErrorResponse.class
     )
     @ApiResponse(
             code = 500,
-            message = "Failed to send message"
+            message = "Failed to send message",
+            responseBody = ErrorResponse.class
     )
     @Post(BASE_PATH + "/send/{userToId}")
     public void sendMessage(HttpContext context) {
         final NewJson body = context.getRequest().getBody();
 
         if(!verifySendMessageRequest(body)) {
-            final NewJson response = new NewJson();
-            response.setString("message", "Invalid request body.");
-            context.getResponse().setBody(response);
-            context.getResponse().setCode(ResponseCodes.BAD_REQUEST);
+            badRequest(context.getResponse(), "Invalid request body.");
             return;
         }
 
         final String messageContent = body.getString("message");
 
         if (messageContent == null) {
-            final NewJson response = new NewJson();
-            response.setString("message", "Message content is required.");
-            context.getResponse().setBody(response);
-            context.getResponse().setCode(ResponseCodes.BAD_REQUEST);
+            badRequest(context.getResponse(), "Message content is required.");
             return;
         }
 
@@ -282,17 +280,20 @@ public class MessageResource {
         final String userFromIdString = context.getSession().get("userId");
 
         final UUID userToId = uuidFromString(userToIdString, context);
+        if (userToId == null) {
+            return;
+        }
         final UUID userFromId = uuidFromString(userFromIdString, context);
+        if (userFromId == null) {
+            return;
+        }
 
         final Message message = messageService.newMessage(userToId, userFromId, messageContent);
 
         final boolean success = messageService.update(message);
 
         if (!success) {
-            final NewJson response = new NewJson();
-            response.setString("message", "Failed to send message.");
-            context.getResponse().setBody(response);
-            context.getResponse().setCode(ResponseCodes.INTERNAL_SERVER_ERROR);
+            internalError(context.getResponse(), "Failed to send message.");
             return;
         }
 
@@ -300,11 +301,7 @@ public class MessageResource {
     }
 
     private void sendMessageNotFound(UUID messageId, HttpContext context) {
-        final NewJson response = new NewJson();
-        response.setString("message", "Message with id " + messageId + " not found.");
-
-        context.getResponse().setBody(response);
-        context.getResponse().setCode(ResponseCodes.NOT_FOUND);
+        notFound(context.getResponse(), "Message with id " + messageId + " not found.");
     }
 
     private boolean verifySendMessageRequest(NewJson body) {
